--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -111,9 +111,9 @@
                               <li class="list-group-item">
                                 <div class="pull-right m-l">
                                   <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                                  <a href="#"><i class="icon-plus"></i></a>
+                                  <a href="/media/Aadat.mp3"><i class="icon-plus"></i></a>
                                 </div>
-                                <a href="#" class="jp-play-me m-r-sm pull-left">
+                                <a href="/media/Aadat.mp3" class="jp-play-me m-r-sm pull-left">
                                   <i class="icon-control-play text"></i>
                                   <i class="icon-control-pause text-active"></i>
                                 </a>
@@ -198,8 +198,6 @@
 {#                </section>#}
 
               {% endif %}
-
-
 
 
 {#                </header>#}
@@ -346,7 +344,7 @@
                   <div class="panel clearfix">
                     <div class="panel-body">
                       <a href="#" class="thumb pull-left m-r">
-                        <img src="images/a0.png" class="img-circle">
+                        <img src="/static/images/a0.png" class="img-circle">
                       </a>
                       <div class="clear">
                         <a href="#" class="text-info">@Mike Mcalidek <i class="fa fa-twitter"></i></a>
