--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="{% static 'css/simple-line-icons.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/font.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/app.css' %}" type="text/css">
-  <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}" type="text/css" media="all" />
 
   {% block custom_css %}
   <!--   Your custom css will be here. -->
