--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -111,9 +111,9 @@
                               <li class="list-group-item">
                                 <div class="pull-right m-l">
                                   <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                                  <a href="/media/Aadat.mp3"><i class="icon-plus"></i></a>
+                                  <a href="{{ songs.upload.url }}"><i class="icon-plus"></i></a>
                                 </div>
-                                <a href="/media/Aadat.mp3" class="jp-play-me m-r-sm pull-left">
+                                <a href= "#" data-mp3 = "{{ songs.upload.url }}" name = "{{ songs.name }}" class="jp-play-me m-r-sm pull-left">
                                   <i class="icon-control-play text"></i>
                                   <i class="icon-control-pause text-active"></i>
                                 </a>
