--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -95,9 +95,8 @@
                                   <li class="list-group-item">
                                     <div class="pull-right m-l">
                                       <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                                      <a href="#" data-toggle="class">
+                                      <a href="#">
                                         <i class="fa fa-plus-circle text" data-mp3="{{ songs.upload.url }}" name="{{ songs.name }}"></i>
-                                        <i class="fa fa-check-circle text-active text-info"></i>
                                       </a>
                                     </div>
                                     <a href="#" class="jp-play-me m-r-sm pull-left" data-mp3="{{ songs.upload.url }}" name="{{ songs.name }}">
