--- a/mmb_repo/templates/pages/home.html
+++ b/mmb_repo/templates/pages/home.html
@@ -25,13 +25,13 @@
                   </div>
                   <div class="item-overlay opacity r r-2x bg-black">
                     <div class="center text-center m-t-n">
-                      <a href="#" data-toggle="class">
+                      <a href="#" class="jp-play-me" data-mp3="/media/Awari.mp3" name="Awariii">
                         <i class="icon-control-play i-2x text"></i>
                         <i class="icon-control-pause i-2x text-active"></i>
                       </a>
                     </div>
                     <div class="bottom padder m-b-sm">
-                      <a href="#" class="pull-right active">
+                      <a href="#" class="pull-right active" id="audio_1">
                         <i class="fa fa-heart-o"></i>
 {#                        <i class="fa fa-heart text-active text-danger"></i>#}
                       </a>
