--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -91,20 +91,20 @@
     {#                <section class="vbox animated fadeInUp">#}
                       <section class="scrollable" style="margin-top: 50px;">
                         <ul class="list-group list-group-lg no-radius no-border no-bg m-t-n-xxs m-b-none auto">
-                            {% for songs in playlist %}
+                            {% for song in playlist %}
                                   <li class="list-group-item">
                                     <div class="pull-right m-l">
                                       <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
                                       <a href="#">
-                                        <i class="fa fa-plus-circle text" data-mp3="{{ songs.upload.url }}" name="{{ songs.name }}"></i>
+                                        <i class="fa fa-plus-circle text" data-mp3="{{ song.upload.url }}" name="{{ song.name }}"></i>
                                       </a>
                                     </div>
-                                    <a href="#" class="jp-play-me m-r-sm pull-left" data-mp3="{{ songs.upload.url }}" name="{{ songs.name }}">
+                                    <a href="#" id="audio_{{ song.pk }}" class="jp-play-me m-r-sm pull-left" data-mp3="{{ song.upload.url }}" name="{{ song.name }}">
                                       <i class="icon-control-play text"></i>
                                       <i class="icon-control-pause text-active"></i>
                                     </a>
                                     <div class="clear text-ellipsis">
-                                      <span>{{ songs.name }}</span>
+                                      <span>{{ song.name }}</span>
                                       <span class="text-muted"> -- 04:15</span>
                                     </div>
                                   </li>
