--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="btn-group btn-group-justified m-b">
                       <a class="btn btn-success btn-rounded" data-toggle="button">
-                        <span class="text">
+                        <span class="text" id="follow">
                           <i class="fa fa-eye"></i> Follow
                         </span>
                         <span class="text-active">
