--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load crispy_forms_tags %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en" class="app">
@@ -79,8 +81,14 @@
                     <h4 class="modal-title">Create Your Band&hellip;</h4>
                   </div>
                   <div class="modal-body">
-{#                    #}
+                      <div class="container">
+                        <div class="col-md-8">
+{#                            {% crispy band_form  %}#}
+                            <br><br><br><br><br><br>
+{#                            <div id='form-errors'>{{ band_form_errors }}</div>#}
+                        </div>
                     </div>
+                  </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary">Create</button>
@@ -88,7 +96,7 @@
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
             </div>
-          <a href="{% url 'search' %}" data-toggle="ajaxModal" class="btn  btn-info">MakeMyBand</a>
+          <a href="{% url 'bands:create_band' %}" class="btn  btn-info">MakeMyBand</a>
       </div>
 
       <!-- to be shown when user is logged in -->
