--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en" class="app">
-<head>  
+<head>
   <meta charset="utf-8" />
   <title>MakeMyBand - Musicians | Bands | Blogs</title>
   <meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
@@ -66,7 +66,7 @@
           </div>
         </div>
       </form>
-      
+
       <!-- to be shown when user is logged in -->
       {% if request.user.is_authenticated %}
       <div class="navbar-right ">
@@ -112,7 +112,7 @@
               </span>
               {{ request.user }} <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu animated fadeInRight">            
+            <ul class="dropdown-menu animated fadeInRight">
               <li>
                 <span class="arrow top"></span>
                 <a href="{% url 'users:edit_profile' %}">Settings</a>
@@ -136,7 +136,7 @@
             </ul>
           </li>
         </ul>
-      </div> 
+      </div>
       {% else %}
          <div class="navbar-form navbar-right input-s-lg m-t m-l-n-xs hidden-xs">
           <!-- <ul class="nav navbar-nav m-n hidden-xs nav-user user">
@@ -180,7 +180,7 @@
 
       {% endif %}
 
-  
+
 
     </header>
     <section>
@@ -193,7 +193,7 @@
 
 
 
-                <!-- nav -->                 
+                <!-- nav -->
                 <nav class="nav-primary hidden-xs">
                   <ul class="nav bg clearfix">
                     <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted">
@@ -248,21 +248,21 @@
                       </a>
                       <ul class="nav dk text-sm">
                         <li >
-                          <a href="layout-color.html" class="auto">                                                        
+                          <a href="layout-color.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Color option</span>
                           </a>
                         </li>
                         <li >
-                          <a href="layout-boxed.html" class="auto">                                                        
+                          <a href="layout-boxed.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Boxed layout</span>
                           </a>
                         </li>
                         <li >
-                          <a href="layout-fluid.html" class="auto">                                                        
+                          <a href="layout-fluid.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Fluid layout</span>
@@ -282,15 +282,15 @@
                       </a>
                       <ul class="nav dk text-sm">
                         <li >
-                          <a href="buttons.html" class="auto">                                                        
+                          <a href="buttons.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Buttons</span>
                           </a>
                         </li>
                         <li >
-                          <a href="icons.html" class="auto">                            
-                            <b class="badge bg-info pull-right">369</b>                                                        
+                          <a href="icons.html" class="auto">
+                            <b class="badge bg-info pull-right">369</b>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Icons</span>
@@ -304,33 +304,33 @@
                           </a>
                         </li>
                         <li >
-                          <a href="widgets.html" class="auto">                            
-                            <b class="badge bg-dark pull-right">8</b>                                                        
+                          <a href="widgets.html" class="auto">
+                            <b class="badge bg-dark pull-right">8</b>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Widgets</span>
                           </a>
                         </li>
                         <li >
-                          <a href="components.html" class="auto">                                                        
+                          <a href="components.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Components</span>
                           </a>
                         </li>
                         <li >
-                          <a href="list.html" class="auto">                                                        
+                          <a href="list.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>List group</span>
                           </a>
                         </li>
                         <li >
-                          <a href="#table" class="auto">                            
+                          <a href="#table" class="auto">
                             <span class="pull-right text-muted">
                               <i class="fa fa-angle-left text"></i>
                               <i class="fa fa-angle-down text-active"></i>
-                            </span>                            
+                            </span>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Table</span>
@@ -351,11 +351,11 @@
                           </ul>
                         </li>
                         <li >
-                          <a href="#form" class="auto">                            
+                          <a href="#form" class="auto">
                             <span class="pull-right text-muted">
                               <i class="fa fa-angle-left text"></i>
                               <i class="fa fa-angle-down text-active"></i>
-                            </span>                            
+                            </span>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Form</span>
@@ -382,21 +382,21 @@
                           </ul>
                         </li>
                         <li >
-                          <a href="chart.html" class="auto">                                                        
+                          <a href="chart.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Chart</span>
                           </a>
                         </li>
                         <li >
-                          <a href="portlet.html" class="auto">                                                        
+                          <a href="portlet.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Portlet</span>
                           </a>
                         </li>
                         <li >
-                          <a href="timeline.html" class="auto">                                                        
+                          <a href="timeline.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Timeline</span>
@@ -416,56 +416,56 @@
                       </a>
                       <ul class="nav dk text-sm">
                         <li >
-                          <a href="profile.html" class="auto">                                                        
+                          <a href="profile.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Profile</span>
                           </a>
                         </li>
                         <li >
-                          <a href="blog.html" class="auto">                                                        
+                          <a href="blog.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Blog</span>
                           </a>
                         </li>
                         <li >
-                          <a href="invoice.html" class="auto">                                                        
+                          <a href="invoice.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Invoice</span>
                           </a>
                         </li>
                         <li >
-                          <a href="gmap.html" class="auto">                                                        
+                          <a href="gmap.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Google Map</span>
                           </a>
                         </li>
                         <li >
-                          <a href="jvectormap.html" class="auto">                                                        
+                          <a href="jvectormap.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Vector Map</span>
                           </a>
                         </li>
                         <li >
-                          <a href="signin.html" class="auto">                                                        
+                          <a href="signin.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Signin</span>
                           </a>
                         </li>
                         <li >
-                          <a href="signup.html" class="auto">                                                        
+                          <a href="signup.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Signup</span>
                           </a>
                         </li>
                         <li >
-                          <a href="404.html" class="auto">                                                        
+                          <a href="404.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>404</span>
@@ -497,7 +497,7 @@
                 <!-- / nav -->
               </div>
             </section>
-            
+
             <footer class="footer hidden-xs no-padder text-center-nav-xs"></footer>
           </section>
         </aside>
@@ -505,97 +505,28 @@
 
 {% endblock %}
 
-{% block content %} 
+{% block content %}
 
 
 {% endblock %}
       </section>
     </section>
-    <footer class="footer bg-dark" style="position: fixed">
-          <div id="jp_container_N">
-            <div class="jp-type-playlist">
-              <div id="jplayer_N" class="jp-jplayer hide"></div>
-              <div class="jp-gui">
-                <div class="jp-video-play hide">
-                  <a class="jp-video-play-icon">play</a>
-                </div>
-                <div class="jp-interface">
-                  <div class="jp-controls">
-                    <div><a class="jp-previous"><i class="icon-control-rewind i-lg"></i></a></div>
-                    <div>
-                      <a class="jp-play"><i class="icon-control-play i-2x"></i></a>
-                      <a class="jp-pause hid"><i class="icon-control-pause i-2x"></i></a>
-                    </div>
-                    <div><a class="jp-next"><i class="icon-control-forward i-lg"></i></a></div>
-                    <div class="hide"><a class="jp-stop"><i class="fa fa-stop"></i></a></div>
-                    <div><a class="" data-toggle="dropdown" data-target="#playlist"><i class="icon-list"></i></a></div>
-                    <div class="jp-progress hidden-xs">
-                      <div class="jp-seek-bar dk">
-                        <div class="jp-play-bar bg-info">
-                        </div>
-                        <div class="jp-title text-lt">
-                          <ul>
-                            <li></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="hidden-xs hidden-sm jp-current-time text-xs text-muted"></div>
-                    <div class="hidden-xs hidden-sm jp-duration text-xs text-muted"></div>
-                    <div class="hidden-xs hidden-sm">
-                      <a class="jp-mute" title="mute"><i class="icon-volume-2"></i></a>
-                      <a class="jp-unmute hid" title="unmute"><i class="icon-volume-off"></i></a>
-                    </div>
-                    <div class="hidden-xs hidden-sm jp-volume">
-                      <div class="jp-volume-bar dk">
-                        <div class="jp-volume-bar-value lter"></div>
-                      </div>
-                    </div>
-                    <div>
-                      <a class="jp-shuffle" title="shuffle"><i class="icon-shuffle text-muted"></i></a>
-                      <a class="jp-shuffle-off hid" title="shuffle off"><i class="icon-shuffle text-lt"></i></a>
-                    </div>
-                    <div>
-                      <a class="jp-repeat" title="repeat"><i class="icon-loop text-muted"></i></a>
-                      <a class="jp-repeat-off hid" title="repeat off"><i class="icon-loop text-lt"></i></a>
-                    </div>
-                    <div class="hide">
-                      <a class="jp-full-screen" title="full screen"><i class="fa fa-expand"></i></a>
-                      <a class="jp-restore-screen" title="restore screen"><i class="fa fa-compress text-lt"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="jp-playlist dropup" id="playlist">
-                <ul class="dropdown-menu aside-xl dker">
-                  <!-- The method Playlist.displayPlaylist() uses this unordered list -->
-                  <li class="list-group-item"></li>
-                </ul>
-              </div>
-              <div class="jp-no-solution hide">
-                <span>Update Required</span>
-                To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-              </div>
-            </div>
-          </div>
-        </footer>
+<footer class="footer bg-dark"  id="myplayer" style="position: fixed"></footer>
 
   </section>
+  <a href="#" id="player" class="btn btn-danger"
+       style="margin-top:10px;margin-bottom:100px;margin-left:500px">
+      player</a>
   <script src=" {% static 'js/jquery.min.js' %}"></script>
   <!-- Bootstrap -->
   <script src=" {% static 'js/bootstrap.js' %}"></script>
-
   <!-- App -->
-  <script src=" {% static 'js/app.js' %}"></script>  
- 
+  <script src=" {% static 'js/app.js' %}"></script>
   <script src=" {% static 'js/slimscroll/jquery.slimscroll.min.js' %}"></script>
-    <script src=" {% static 'js/app.plugin.js' %}"></script>
-    <script src=" {% static 'js/jquery-ui-min.js' %}"></script>  
-  <script type="text/javascript" src=" {% static 'js/jPlayer/jquery.jplayer.min.js' %}"></script>
-  <script type="text/javascript" src=" {% static 'js/jPlayer/add-on/jplayer.playlist.min.js' %}"></script>
-  <script type="text/javascript" src=" {% static 'js/jPlayer/demo.js' %}"></script>
+  <script src=" {% static 'js/app.plugin.js' %}"></script>
+  <script src=" {% static 'js/jquery-ui-min.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/chosen.jquery.min.js' %}"></script>
-  <script src=" {% static 'js/project.js' %}"></script>  
+  <script src=" {% static 'js/project.js' %}"></script>
   {% block custom_js %}
   <!--   Your custom js will be here. -->
   {% endblock %}
