--- a/mmb_repo/templates/pages/home.html
+++ b/mmb_repo/templates/pages/home.html
@@ -25,7 +25,7 @@
                   </div>
                   <div class="item-overlay opacity r r-2x bg-black">
                     <div class="center text-center m-t-n">
-                      <a href="#" class="jp-play-me" data-mp3="/media/Awari.mp3" name="Awariii">
+                      <a href="#" class="jp-play-me" data-mp3="/media/audio/2_Naveen.khatri/Sanam%20Teri%20Kasam%20(Sanam%20Teri%20Kasam)%20-320Kbps%20%5BDJMaza.Info%5D_2q6Rl7l.mp3" name="Awariii">
                         <i class="icon-control-play i-2x text"></i>
                         <i class="icon-control-pause i-2x text-active"></i>
                       </a>
